--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-0xBADDCAFE
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en-US" xml:lang="en-US">
+<head>
+<title>0xBADDCAFE</title>
+</head>
+<body>
+  
+<div>
+<pre>
+ (   Demitasse,
+  )  s'il vous
+c[]  plait...
+</pre>
+</div>
+
+</body>
+</html>
+
+
