--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ html, body, #container {
 <div id ="container">
 <div id ="alfa" class="panorama"><img src="PIA16441_McMurdo_Merged_Cyl_L456F.jpg" /></div>
 <div id ="bravo" class="panorama"><img src="PIA16441_McMurdo_Merged_Cyl_L456F.jpg" /></div>
-<div id = "status" style="padding: 25px;font-family: monospace; font-size: 12px;position: relative;">STATUS:<br><pre><--|--></pre></div>
+<div id = "status" style="padding: 25px;font-family: monospace; font-size: 12px;position: relative;">STATUS: SYN-SENT<br>USE THE UP/DOWN LEFT/RIGHT ARROW KEYS<br><pre><--|--></pre></div>
 </div>
 
 <script>
@@ -41,6 +41,7 @@ function init(){
     bravo.style.left = img.width + 'px';
     alfa.style.top = '0px';
     bravo.style.top = '0px';
+    setStatus();
 }
 function setStatus(){
     document.getElementById("status").innerHTML = "STATUS: OK" + "<br>"
