change status again

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@ function init(){
     bravo.style.left = img.width + 'px';
     alfa.style.top = '0px';
     bravo.style.top = '0px';
-    document.getElementById("status").innerHTML = "STATUS: SYN-SENT" + "<br>"
-    + "USE THE UP/DOWN LEFT/RIGHT ARROW KEYS<br>" 
+    document.getElementById("status").innerHTML = "STATUS: OK" + "<br>"
+    + "Low Ridge<br>814th Martian day<br>" 
     + "<br><pre><--|--></pre><br><br>"
 }
 function setStatus(){
