--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Spirit Mars Rover Cam</title>
+    <title>Spirit Mars Rover Cam 360-degree</title>
 <style>
 html, body, #container {
   height: 100%;
@@ -11,29 +11,48 @@ html, body, #container {
 #container {
   position: relative;
   background: black;
+  color: white;
 }
 #alfa, #bravo {
   /*width: 50px;
   height: 50px;*/
   position: absolute;
   background-color: white;
+  display: none;
 }
 </style>
 </head>
 <body>
 
 <div id ="container">
-<div id ="alfa" class="panorama"><img src="PIA16441_McMurdo_Merged_Cyl_L456F.jpg" /></div>
-<div id ="bravo" class="panorama"><img src="PIA16441_McMurdo_Merged_Cyl_L456F.jpg" /></div>
-<div id = "status" style="padding: 25px;font-family: monospace; font-size: 12px;position: relative;">STATUS: SYN-SENT<br>USE THE UP/DOWN LEFT/RIGHT ARROW KEYS<br><pre><--|--></pre></div>
+<div id ="alfa" class="panorama"><img id = "alfasrc" /></div>
+<div id ="bravo" class="panorama"><img id = "bravosrc" /></div>
+<div id = "status" style="padding: 25px;font-family: monospace; font-size: 12px;position: relative;">STATUS: SYN-SENT<br>USE THE UP/DOWN LEFT/RIGHT ARROW KEYS</div>
 </div>
 
 <script>
 var alfa = null, bravo = null;
 var img=new Image();
-(function () {
-    img.src='PIA16441_McMurdo_Merged_Cyl_L456F.jpg';
+function display()
+{
+    document.getElementById('alfa').style.display = 'block';
+    document.getElementById('bravo').style.display = 'block';
+    document.getElementById('container').style.color = 'black';
+}
+(function()
+{
+    img.onload = display;
+    img.src = 'PIA16441_McMurdo_Merged_Cyl_L456F.jpg';
 })();
+(function()
+{
+    document.getElementById('alfasrc').src = 'PIA16441_McMurdo_Merged_Cyl_L456F.jpg';
+    document.getElementById('bravosrc').src = 'PIA16441_McMurdo_Merged_Cyl_L456F.jpg';
+})();
+
+var ctrl = "<pre>    U    \nL<--|-->R\n    D    </pre>"
+
+
 function init(){
     alfa = document.getElementById('alfa');
     bravo = document.getElementById('bravo');
@@ -42,25 +61,32 @@ function init(){
     alfa.style.top = '0px';
     bravo.style.top = '0px';
     document.getElementById("status").innerHTML = "STATUS: OK" + "<br>"
-    + "Low Ridge<br>814th Martian day<br>" 
-    + "<br><pre><--|--></pre><br><br>"
+    + "Mars Exploration Rover Spirit<br>Low Ridge" 
+    + "<br>" + ctrl;
 }
+
+
+
 function setStatus(){
+    var lim = (window.innerHeight - img.height);
+    var az = parseInt(parseInt(alfa.style.left)*(-1)/img.width*360);
+    var alt = parseInt(parseInt(alfa.style.top)*(-1)/lim*90);
     document.getElementById("status").innerHTML = "STATUS: OK" + "<br>"
-    + "Low Ridge<br>814th Martian day<br>" 
-    + "<br><pre><--|--></pre><br><br>"
-    + parseInt(alfa.style.left) + "<br>" + parseInt(alfa.style.top);
+    + "Mars Exploration Rover Spirit<br>Low Ridge" 
+    + "<br>" + ctrl
+    + "&nbsp;" + "AZ: " + az + "&deg;" + "<br>"
+    + "ALT: " + alt + "&deg;";
 }
 function moveHor(dx) {
     alfa.style.left = -(img.width - parseInt(alfa.style.left) + dx) % img.width + 'px';
     bravo.style.left = parseInt(alfa.style.left) + img.width + 'px';
     setStatus();
 }
-function moveVert(dx) {
+function moveVert(dy) {
     var lim = (window.innerHeight - img.height);
-    if (parseInt(alfa.style.top) +dx >= lim && parseInt(alfa.style.top) +dx <= 0) {
-        alfa.style.top = (parseInt(alfa.style.top) + dx) + 'px';
-        bravo.style.top = (parseInt(bravo.style.top) + dx) + 'px';
+    if (parseInt(alfa.style.top) +dy >= lim && parseInt(alfa.style.top) +dy <= 0) {
+        alfa.style.top = (parseInt(alfa.style.top) + dy) + 'px';
+        bravo.style.top = (parseInt(bravo.style.top) + dy) + 'px';
         setStatus();
     }
 }
