--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Spirit Mars Rover Cam 360-degree</title>
+    <title>Mars Exploration Rover Spirit Pancam 360-degree</title>
 <style>
 html, body, #container {
   height: 100%;
@@ -14,17 +14,23 @@ html, body, #container {
   color: white;
 }
 #alfa, #bravo {
-  /*width: 50px;
-  height: 50px;*/
   position: absolute;
   background-color: white;
   display: none;
+}
+video {
+position: absolute;
+z-index: 100;
+top: 0; left: 0;
+min-width: 100%; min-height: 100%;
+opacity: .0875; filter: alpha(opacity=8);
 }
 </style>
 </head>
 <body>
 
 <div id ="container">
+<video src="flicker.mp4" loop autoplay></video>
 <div id ="alfa" class="panorama"><img id = "alfasrc" /></div>
 <div id ="bravo" class="panorama"><img id = "bravosrc" /></div>
 <div id = "status" style="padding: 25px;font-family: monospace; font-size: 12px;position: relative;">STATUS: SYN-SENT<br>USE THE UP/DOWN LEFT/RIGHT ARROW KEYS</div>
