change start message

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ display: none;
 <video id = "flicker" src="flicker.mp4" loop autoplay></video>
 <div id = "alfa" class="panorama"><img id = "alfasrc" /></div>
 <div id = "bravo" class="panorama"><img id = "bravosrc" /></div>
-<div id = "status">Establishing secure connection...<br>USE THE UP/DOWN LEFT/RIGHT ARROW KEYS</div>
+<div id = "status">ESTABLISHING SECURE CONNECTION...<br>USE THE UP/DOWN LEFT/RIGHT ARROW KEYS</div>
 </div>
 
 <script>
