--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ html, body, #container {
   font-family: monospace;
   font-size: 12px;
 }
-a:link    {color:grey; background-color:transparent; text-decoration:underline}
+a:link    {color:white; background-color:transparent; text-decoration:underline}
 a:visited {color:grey; background-color:transparent; text-decoration:none}
 a:hover   {color:white; background-color:transparent; text-decoration:underline}
 a:active  {color:white; background-color:transparent; text-decoration:underline}
