--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ html, body, #container {
   font-size: 12px;
 }
 a:link    {color:white; background-color:transparent; text-decoration:underline}
-a:visited {color:grey; background-color:transparent; text-decoration:none}
+a:visited {color:white; background-color:transparent; text-decoration:none}
 a:hover   {color:white; background-color:transparent; text-decoration:underline}
 a:active  {color:white; background-color:transparent; text-decoration:underline}
 </style>
