Declared character encoding of the HTML

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="UTF-8">
   <title>0xBADDCAFE</title>
 <style>
 html, body, #container {
@@ -14,7 +15,7 @@ html, body, #container {
   color: white;
   padding: 25px;
   font-family: monospace;
-  font-size: 12px;
+  font-size: 100%;
 }
 a:link    {color:white; background-color:transparent; text-decoration:underline}
 a:visited {color:white; background-color:transparent; text-decoration:none}
