Declared character encoding of the HTML

--- a/spirit/index.html
+++ b/spirit/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="UTF-8">
     <title>Mars Exploration Rover Spirit Pancam 360-degree</title>
 <style>
 html, body, #container {
@@ -21,7 +22,7 @@ html, body, #container {
 #status {
   padding: 25px;
   font-family: monospace;
-  font-size: 12px;
+  font-size: 100%;
   position: relative;
 }
 video {
