Correct font size

--- a/spirit/index.html
+++ b/spirit/index.html
@@ -36,7 +36,7 @@ video {
 #info {
   padding: 25px;
   font-family: monospace;
-  font-size: 12px;
+  font-size: 100%;
   position: relative;
   display: none;
 }
