--- a/spirit/index.html
+++ b/spirit/index.html
@@ -3,56 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Mars Exploration Rover Spirit Pancam 360-degree</title>
-<style>
-html, body, #container {
-  height: 100%;
-  margin: 0;
-  overflow: hidden;
-} 
-#container {
-  position: relative;
-  background: black;
-  color: white;
-}
-#alfa, #bravo {
-  position: absolute;
-  background-color: white;
-  display: none;
-}
-#status {
-  padding: 25px;
-  font-family: monospace;
-  font-size: 100%;
-  position: relative;
-}
-video {
-  position: absolute;
-  z-index: 100;
-  top: 0; left: 0;
-  min-width: 100%; min-height: 100%;
-  opacity: .0875; filter: alpha(opacity=8);
-  display: none;
-}
-#info {
-  padding: 25px;
-  font-family: monospace;
-  font-size: 100%;
-  position: relative;
-  display: none;
-}
-#cross {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-</style>
+    <link href="css/spirit.css" rel="stylesheet"/>
 </head>
 <body>
 
 <div id = "container">
 <!-- flicker source: http://thestlbrowns.com/#/history/the-early-years //-->
-<video id = "flicker" src="flicker.mp4" loop autoplay></video>
+<video id = "flicker" src="img/flicker.mp4" loop autoplay></video>
 <div id = "alfa"><img id = "alfasrc" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" alt="." /></div>
 <div id = "bravo"><img id = "bravosrc" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" alt="."/></div>
 <div id = "info">
@@ -66,173 +23,8 @@ MARS EXPLORATION ROVER SPIRIT
 </div>
 <span id = "cross">+</span>
 
-<script>
-var alfa = null, bravo = null;
-var img=new Image();
-function display()
-{
-    document.getElementById('flicker').style.display = 'block';
-    document.getElementById('info').style.display = 'block';
-    document.getElementById('alfa').style.display = 'block';
-    document.getElementById('bravo').style.display = 'block';
-    document.getElementById('container').style.color = 'black';
-}
-(function()
-{
-    img.onload = display;
-    img.src = 'PIA16440_McMurdo_Merged_Cyl_L456atc.jpg';
-})();
-(function()
-{
-    document.getElementById('alfasrc').src = 'PIA16440_McMurdo_Merged_Cyl_L456atc.jpg';
-    document.getElementById('bravosrc').src = 'PIA16440_McMurdo_Merged_Cyl_L456atc.jpg';
-})();
-
-function init(){
-    alfa = document.getElementById('alfa');
-    bravo = document.getElementById('bravo');
-    alfa.style.left = '0px';
-    bravo.style.left = img.width + 'px';
-    alfa.style.top = '0px';
-    bravo.style.top = '0px';
-    document.getElementById("status").innerHTML = "STATUS: OK";
-}
-
-
-
-function setStatus(){
-    var lim = (window.innerHeight - img.height);
-    var az = parseInt(parseInt(alfa.style.left)*(-1)/img.width*360);
-    var alt = parseInt(parseInt(alfa.style.top)*(-1)/lim*90);
-    document.getElementById("status").innerHTML = "STATUS: OK" + "<br>"
-    + "AZ: " + az + "&deg;" + "<br>"
-    + "ALT: " + alt + "&deg;";
-}
-function moveHor(dx) {
-    alfa.style.left = -(img.width - parseInt(alfa.style.left) + dx) % img.width + 'px';
-    bravo.style.left = parseInt(alfa.style.left) + img.width + 'px';
-    setStatus();
-}
-function moveVert(dy) {
-    var lim = (window.innerHeight - img.height);
-    if (parseInt(alfa.style.top) +dy >= lim && parseInt(alfa.style.top) +dy <= 0) {
-        alfa.style.top = (parseInt(alfa.style.top) + dy) + 'px';
-        bravo.style.top = (parseInt(bravo.style.top) + dy) + 'px';
-        setStatus();
-    }
-}
-
-window.onload = init;
-
-document.onkeydown = function(e) {
-    e = e || event
-    switch(e.keyCode) {
-        case 37: // left
-        moveHor(-5);
-        return false
-        case 38: // up
-        moveVert(5);
-        return false
-        case 39: // right
-        moveHor(5);
-        return false
-        case 40: // down
-        moveVert(-5);
-        return false
-    }
-} 
-</script>
-<!--
-/**
- * Formulae from Allison, M., and M. McEwen 2000.
- * http://pubs.giss.nasa.gov/abs/al05000n.html
- * A post-Pathfinder evaluation of aerocentric solar coordinates
- * with improved timing recipes for Mars seasonal/diurnal climate studies.
- * Planet. Space Sci. 48, 215-235.
- * and http://www.giss.nasa.gov/tools/mars24/help/algorithm.html 
- * Mars24 Algorithm and Worked Examples.
- * Source: http://jtauber.github.io/mars-clock/ 
- */
- //-->
-<script>
-    function cos(deg) {
-        return Math.cos(deg * Math.PI / 180);
-    }
-    function sin(deg) {
-        return Math.sin(deg * Math.PI / 180);
-    }
-    function h_to_hms(h) {
-        var x = h * 3600;
-        var hh = Math.floor(x / 3600);
-        if (hh < 10) hh = "0" + hh;
-        var y = x % 3600;
-        var mm = Math.floor(y / 60);
-        if (mm < 10) mm = "0" + mm;
-        var ss = Math.round(y % 60);
-        if (ss < 10) ss = "0" + ss;
-        return hh + ":" + mm + ":" + ss;
-    }
-    function add_commas(n) {
-        n += "";
-        var x = n.split(".");
-        var x1 = x[0];
-        var x2 = x.length > 1 ? "." + x[1] : "";
-        var rgx = /(\d+)(\d{3})/;
-        while (rgx.test(x1)) {
-            x1 = x1.replace(rgx, "$1" + "," + "$2");
-        }
-        return x1 + x2;
-    }
-    function within_24(n) {
-        if (n < 0) {
-            n += 24;
-        } else if (n >= 24) {
-            n -= 24;
-        }
-        return n;
-    }
-    function update() {
-        var d = new Date();
-        var millis = d.getTime();
-        var jd_ut = 2440587.5 + (millis / 8.64E7);
-        var jd_tt = jd_ut + (36 + 32.184) / 86400;
-        var j2000 = jd_tt - 2451545.0;
-        var m = (19.3870 + 0.52402075 * j2000) % 360;
-        var alpha_fms = (270.3863 + 0.52403840 * j2000) % 360;
-        var e = (0.09340 + 2.477E-9 * j2000);
-        var pbs =
-            0.0071 * cos((0.985626 * j2000 /  2.2353) +  49.409) +
-            0.0057 * cos((0.985626 * j2000 /  2.7543) + 168.173) +
-            0.0039 * cos((0.985626 * j2000 /  1.1177) + 191.837) +
-            0.0037 * cos((0.985626 * j2000 / 15.7866) +  21.736) +
-            0.0021 * cos((0.985626 * j2000 /  2.1354) +  15.704) +
-            0.0020 * cos((0.985626 * j2000 /  2.4694) +  95.528) +
-            0.0018 * cos((0.985626 * j2000 / 32.8493) +  49.095);
-        var nu_m = (10.691 + 3.0E-7 * j2000) * sin(m) +
-            0.623 * sin(2 * m) +
-            0.050 * sin(3 * m) +
-            0.005 * sin(4 * m) +
-            0.0005 * sin(5 * m) +
-            pbs;
-        var nu = nu_m + m;
-        var l_s = (alpha_fms + nu_m) % 360;
-        var eot = 2.861 * sin(2 * l_s) - 0.071 * sin(4 * l_s) + 0.002 * sin(6 * l_s) - nu_m;
-        var eot_h = eot * 24 / 360;
-        var msd = (((j2000 - 4.5) / 1.027491252) + 44796.0 - 0.00096);
-        var mtc = (24 * msd) % 24;
-        var spirit_sol_date = msd - 46215 - 0.88212;
-        var spirit_sol = Math.floor(spirit_sol_date);
-        
-        document.getElementById("msd").innerHTML = add_commas(msd.toFixed(5));
-        document.getElementById("mtc").innerHTML = h_to_hms(mtc);
-        document.getElementById("spirit_sol").innerHTML = spirit_sol; //add_commas(spirit_sol.toFixed(5));
-
-    }
-    (function() {
-        update();
-        setInterval(update, 10);
-    })();
-</script>
+<script src="js/spirit.js"></script>
+<script src="js/info.js"></script>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -241,7 +33,6 @@ document.onkeydown = function(e) {
 
   ga('create', 'UA-78956111-1', 'auto');
   ga('send', 'pageview');
-
 </script>
 
 </body>
