--- a/index.html
+++ b/index.html
@@ -3,30 +3,21 @@
 <head>
   <meta charset="UTF-8">
   <title>0xBADDCAFE</title>
-<style>
-html, body, #container {
-  height: 100%;
-  margin: 0;
-  overflow: hidden;
-} 
-#container {
-  position: relative;
-  background: black;
-  color: white;
-  padding: 25px;
-  font-family: monospace;
-  font-size: 100%;
-}
-a:link    {color:white; background-color:transparent; text-decoration:underline}
-a:visited {color:white; background-color:transparent; text-decoration:none}
-a:hover   {color:white; background-color:transparent; text-decoration:underline}
-a:active  {color:white; background-color:transparent; text-decoration:underline}
-</style>
+  <link href="css/main.css" rel="stylesheet"/>
 </head>
 
 <body>
   <div id = "container">
     <a href="/spirit/">Mars Exploration Rover Spirit Pancam 360-degree</a>
   </div>
+  <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-78956111-1', 'auto');
+  ga('send', 'pageview');
+  </script>
 </body>
 </html>
