--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
   <div id = "container">
-    <a href="/spirit/">Mars Exploration Rover Spirit Pancam 360-degree</a>
+    <a href="/spirit/">Mars Exploration Rover Spirit Pancam 360-degree. Use arrow keys to control.</a>
   </div>
   <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
