--- a/index.html
+++ b/index.html
@@ -1,23 +1,17 @@
-<!DOCTYPE html>
-<html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
+   "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>0xBADDCAFE</title>
-  <link href="css/main.css" rel="stylesheet"/>
+ <title>0xBADDCAFE</title>
+ <link href="css/prime.css" rel="stylesheet"  type="text/css"/>
 </head>
-
-<body>
-  <div id = "container">
-    <a href="/spirit/">Mars Exploration Rover Spirit Pancam 360-degree. Use arrow keys to control.</a>
-  </div>
-  <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-78956111-1', 'auto');
-  ga('send', 'pageview');
-  </script>
+<body bgcolor="#212124" text="#bfbfbf">
+  <p>BADDCAFE</p>
+  <hr color="bfbfbf" size="1">
+  <br />
+  <p>LESS IS MORE</p>
+  <br />
+  <p>Extra:<br />
+  /spirit/ - Mars Exploration Rover Spirit Pancam 360-degree. Use arrow keys to control.</p>
 </body>
 </html>
