--- a/index.html
+++ b/index.html
@@ -1,17 +1,15 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-   "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
  <title>0xBADDCAFE</title>
  <link href="css/prime.css" rel="stylesheet"  type="text/css"/>
 </head>
-<body bgcolor="#212124" text="#bfbfbf">
+<body>
   <p>BADDCAFE</p>
-  <hr color="bfbfbf" size="1">
+  <hr size="1" />
   <br />
   <p>LESS IS MORE</p>
   <br />
   <p>Extra:<br />
   /spirit/ - Mars Exploration Rover Spirit Pancam 360-degree. Use arrow keys to control.</p>
-</body>
-</html>
+  </body>
+  </html>
