--- a/index.html
+++ b/index.html
@@ -7,11 +7,9 @@
 </head>
 <body>
   <p>BADDCAFE</p>
-  <hr size="1" />
-  <br />
-  <p>LESS IS MORE</p>
-  <br />
-  <p>Extra:<br />
+  <hr />
+  <p><br />LESS IS MORE</p>
+  <p><br />Extra:<br />
   /spirit/ - Mars Exploration Rover Spirit Pancam 360-degree. Use arrow keys to control.</p>
   </body>
   </html>
