--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
- <title>0xBADDCAFE</title>
- <link href="css/prime.css" rel="stylesheet"  type="text/css"/>
+  <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
+  <title>0xBADDCAFE</title>
+  <link href="css/prime.css" rel="stylesheet"  type="text/css"/>
 </head>
 <body>
   <p>BADDCAFE</p>
