--- a/index.html
+++ b/index.html
@@ -12,5 +12,7 @@
   <p><br />LESS IS MORE</p>
   <p><br />Extra:<br />
   /spirit/ - Mars Exploration Rover Spirit Pancam 360-degree. Use arrow keys to control.</p>
+  <br />
+  <p>Happy New Year!</p>
   </body>
   </html>
